--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 
 body {
+    max-width: 1400px;
+    margin: 0 auto;
     font-family: 'Helvetica Neue', sans-serif;
     font-family: 'Helvetica 25 UltraLight', sans-serif;
     font-family: 'Helvetica 35 Thin', sans-serif;
@@ -10,7 +12,23 @@ body {
     font-family: 'Helvetica 65 Medium', sans-serif;
 }
 
+.section-default    {
+    padding-top: 97px;
+    padding-bottom: 140px;
+}
+
+.section-title {
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 48px;
+    line-height: 56px;
+}
 /*-----header-----*/
+
+.section-hero   {
+   background-color: #373A3C; 
+}
+
 .navbar-dark .navbar-toggler    {
     border-color: #8dd83d;
 }
@@ -24,9 +42,6 @@ body {
 }
 
 /*---hero---*/
-
-
-
 
 .carousel-caption   {
     bottom:  10rem;
@@ -98,4 +113,62 @@ justify-content: end;
 
 .carousel-indicators [data-bs-target]{
     background-color: #8dd83d;
+}
+
+/*---section-best---*/
+
+.section-best   {
+    color: #fff;
+    background: radial-gradient(100% 100% at 50% 0%, #686C6F 0%, #373A3C 100%);
+}
+
+.section-best__pic  {
+    margin-bottom: 16px;
+}
+
+.section-best__descr    {
+    margin-bottom: 43px;
+    text-align: center;
+    font-size: 36px;
+    line-height: 42px;
+
+    
+}
+
+.best-card {
+    color: #435766;
+    background-color: #fff;
+    border: 1px solid #8dd83d;
+}
+
+.best-card__figure  {
+    padding: 0;
+    width: 100%;
+}
+
+.best-card__image   {
+    min-width: 100%;
+}
+
+.best-card__bottom  {
+    padding: 30px 20px;
+}
+
+.best-card__title   {
+    margin-bottom: 13px;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.best-card__text    {
+    margin-bottom: 38px;
+   font-size: 24px;
+   line-height: 28px; 
+}
+
+.best-card__btn {
+    width: 100%;
+    padding: 20px ;
+    font-size: 16px;
+
 }
