--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,10 @@ body {
     color: #7DD42F; 
 }
 
+.user-icon  {
+    margin-right: 20px;
+}
+
 .navbar-toggler:focus   {
   box-shadow: none;  
 }
